test/tests/operators/to_amazon_cloudwatch/validation/error_put_invalid_endpoint.txt
error: failed to initialize HTTP client: invalid url: invalid-url
 --> tests/operators/to_amazon_cloudwatch/validation/error_put_invalid_endpoint.tql:6:1
  |
6 | to_amazon_cloudwatch "ignored", "ignored",
  | ^^^^^^^^^^^^^^^^^^^^ 
  |
